corrected for contrast

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #f1c35a;
     width: 100%;
-    color: #fff;
+    color: #851F00;
     font-size: 1.5rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
@@ -13,8 +13,8 @@
 
 
 .footer > p > a {
-    text-decoration: none;
-    color: rgb(175, 96, 0);
+    text-decoration: underline;
+    color: #851F00;
 }
 
 /* For tablets */
